# itou-communaute-django

./: .coveragerc  .env.template  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Makefile  README.md  docker-compose.yml  env.default.sh  manage.py  pyproject.toml  pytest.ini  setup.cfg  update_dependencies.sh
.github/: pull_request_template.md
.github/workflows/: changelog-generator.yml  ci.yml  pr-auto-author-assign.yml  release-please.yml  review-app-creation.yml  review-app-removal.yml
clevercloud/: add_user_to_list_when_register.sh  collect_daily_django_stats.sh  collect_daily_matomo_stats.sh  collect_monthly_matomo_stats.sh  collect_weekly_matomo_forum_stats.sh  cron.json  extract_tables.sh  pre_build.sh  pre_run.sh  python.json  rebuild_index.sh  review_app_after_succes.sh  run_management_command.sh  send_notifications_daily.sh  send_notifications_regular.sh  send_notifs_on_tag_digest.sh  send_notifs_on_unanswered_topics_list.sh  send_notifs_when_first_reply.sh  send_notifs_when_following_replies.sh  update_index_daily.sh
config/: asgi.py  urls.py  views.py  wsgi.py
config/settings/: _sentry.py  base.py  dev.py  test.py
docker/django/: Dockerfile  entrypoint.sh
docker/postgres/: psql_init.sh
docs/: TODO.md
fixtures/: forum_permissions_fixtures.json  validation_fixtures.json
lacommunaute/: conftest.py
lacommunaute/documentation/: abstract_models.py  admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
lacommunaute/documentation/migrations/: 0001_initial.py  0002_alter_category_image_and_more.py  0002_documentrating.py
lacommunaute/documentation/tests/: tests_category_create_view.py  tests_category_detail_view.py  tests_category_list_view.py  tests_category_update_view.py  tests_document_detail_view.py  tests_document_rating_view.py  tests_models.py
lacommunaute/edito/: admin.py  factories.py  models.py
lacommunaute/edito/migrations/: 0001_initial.py
lacommunaute/edito/tests/: tests_models.py
lacommunaute/event/: admin.py  apps.py  factories.py  models.py  urls.py  views.py
lacommunaute/event/migrations/: 0001_initial.py
lacommunaute/event/tests/: tests_model.py  tests_views.py
lacommunaute/forum/: admin.py  enums.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
lacommunaute/forum/migrations/: 0001_initial.py  0002_initial.py  0003_forum_invitation_token_forum_members_group.py  0003_initial.py  0004_alter_forum_invitation_token.py  0005_forum_is_highlighted_forum_is_private.py  0006_forum_target_audience.py  0007_remove_forum_is_highlighted.py  0008_alter_forum_members_group.py  0009_forum_job_offer_is_allowed.py  0009_remove_forum_target_audience.py  0010_forum_is_newsfeed.py  0011_forum_kind.py  0012_forum_short_description_alter_forum_kind.py  0013_alter_forum_image.py  0014_forumrating.py  0015_alter_forumrating_options.py  0016_forum_certified.py  0017_forum_tags.py  0018_forum_partner.py  0019_del_private_forum_20240905_1202.py  0020_remove_forum_invitation_token_and_more.py  0021_remove_forum_kind.py  0022_forum_forum_forum_tree_id_lft_idx.py
lacommunaute/forum/tests/: test_CategoryForumListView.py  test_categoryforum_createview.py  test_categoryforum_listview.py  test_forum_rating_view.py  test_forum_updateview.py  test_subcategoryforum_createview.py  test_subcategoryforum_listview.py  tests_forms.py  tests_model.py  tests_views.py
lacommunaute/forum_conversation/: admin.py  enums.py  factories.py  forms.py  models.py  shortcuts.py  signals.py  urls.py  view_mixins.py  views.py  views_htmx.py  widgets.py
lacommunaute/forum_conversation/forum_attachments/: admin.py  cache.py  factories.py  forms.py  models.py
lacommunaute/forum_conversation/forum_polls/: admin.py  factories.py  (+5 more)
lacommunaute/forum_file/: admin.py  models.py
lacommunaute/forum_member/: admin.py  enums.py  factories.py  forms.py  models.py  shortcuts.py  urls.py  views.py
lacommunaute/forum_moderation/: admin.py  enums.py  factories.py  models.py  urls.py  utils.py  views.py
lacommunaute/forum_permission/: admin.py  models.py
lacommunaute/forum_search/: apps.py  forms.py  search_indexes.py  urls.py  views.py
lacommunaute/forum_stats/: admin.py  apps.py  factories.py  models.py  tests.py  urls.py  views.py
lacommunaute/forum_upvote/: admin.py  apps.py  factories.py  models.py  shortcuts.py  urls.py  views.py
lacommunaute/inclusion_connect/: constants.py  models.py  tests.py  urls.py  views.py
lacommunaute/metabase/: admin.py  apps.py  factories.py  models.py
lacommunaute/notification/: admin.py  apps.py  emails.py  enums.py  factories.py  middleware.py  models.py  signals.py  tasks.py  utils.py
lacommunaute/openid_connect/: constants.py  middleware.py  models.py  urls.py  views.py
lacommunaute/pages/: sitemaps.py  urls.py  views.py
lacommunaute/partner/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
lacommunaute/search/: apps.py  enums.py  forms.py  models.py  tests.py  urls.py  views.py
lacommunaute/stats/: admin.py  apps.py  enums.py  factories.py  models.py  urls.py  views.py
lacommunaute/surveys/: admin.py  apps.py  enums.py  factories.py  forms.py  models.py  recommendations.py  recommendations.toml  stats.py  urls.py  views.py
lacommunaute/templates/: 400.html  403.html  404.html  500.html  board_base.html  robots.txt
lacommunaute/users/: admin.py  enums.py  factories.py  forms.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
lacommunaute/utils/: abstract_models.py  context_processors.py  date.py  enums.py  factory_boy.py  html.py  iframe.py  json.py  loggers.py  math.py  matomo.py  middleware.py  perms.py  settings_context_processors.py  stats.py  testing.py  tests.py  urls.py  validators.py
requirements/: base.txt  dev.txt  prod.txt
scripts/: changelog.py  import-latest-db-backup.sh  update_dependencies.sh
(+468 files in other folders)
