[tool.poetry]
name = "lacommunaute"
version = "2.9.2"
description = "La communauté de l'inclusion"
authors = []
license = "ETALAB 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "~5.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
django-machina = "^1.2.0"
boto3 = "^1.24.91"
django-storages = "^1.13.1"
httpx = "^0.23.0"
django-compressor = "^4.1"
django-libsass = "^0.9"
sentry-sdk = "^1.10.1"
django-social-share = "^2.3.0"
django-htmx = "^1.12.2"
django-taggit = "^5.0.1"
django-csp = "^3.7"
django-permissions-policy = "^4.15.0"
langdetect = "^1.0.9"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^2.15.2"
pylint-django = "^2.5.3"
pre-commit = "^2.20.0"
coverage = "^6.4.4"
django-extensions = "^3.2.1"
django-debug-toolbar = "^3.7.0"
Werkzeug = "^3.0.3"
pytest-django = "^4.5.2"
debugpy = "^1.6.3"
factory-boy = "^3.2.1"
respx = "^0.20.0"
pygithub = "^1.57"
pytest-xdist = "^3.2.1"
pillow = "^10.0.0"
moto = "^4.2.2"
virtualenv = "^20.24.6"
ruff = "^0.4.5"
djlint = "^1.34.1"
syrupy = "^4.6.0"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
export = { shell = "poetry export --output requirements/base.txt" }
export_dev = { shell = "poetry export --with dev --output requirements/dev.txt" }

[tool.black]
line_length = 119

[tool.ruff]
line-length = 119

[tool.ruff.lint]
ignore = []
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lacommunaute"]
lines-after-imports = 2

[tool.djlint]
profile="django"
ignore="T002,T003,T027,H006,H023,D018"
max_attribute_length=200
format_css = true
format_js = false
